--- a/omam/src/Components/Buttons.css
+++ b/omam/src/Components/Buttons.css
@@ -82,3 +82,13 @@
     text-align: center;
     border-radius: 30px;
 }
+
+.btn--homesize{
+    font-family: 'TitlingGothicFBCompRegular';
+    font-size: 20px;
+    font-weight: bolder;
+    padding: 10px 20px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 5px;
+}
