--- a/omam/src/App.css
+++ b/omam/src/App.css
@@ -41,11 +41,5 @@
   position: absolute;
   top: 225px;
   left: 350px;
-}
-
-.btn1{
-  outline-color: orangered;
-  position: absolute;
-  left: 200px;
-  top: 150px;
+  height: 300px;
 }
