--- a/omam/src/individualpages/Data.css
+++ b/omam/src/individualpages/Data.css
@@ -1,7 +1,6 @@
 .p1{
     text-indent: 50px;
     padding: 20px 40px;
-    display: flex;
     text-align: left;
     flex-direction: column;
     align-items: center;
@@ -10,8 +9,6 @@
 }
 
 .p2{
-    padding: 5px 40px;
-    display: flex;
     text-align: left;
     flex-direction: column;
     align-items: center;
@@ -20,8 +17,7 @@
 }
 
 .p3{
-    padding: 5px 40px;
-    display: flex;
+    padding: 20px 40px;
     text-align: left;
     flex-direction: column;
     align-items: center;
@@ -30,6 +26,37 @@
 }
 
 .p4{
+    text-align: left;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-size: 30px;
 }
 
+.dyer{
+    border: 5px;
+    float: right; 
+    margin: 3px 12px 6px 0px; 
+    border: 7px solid #000000;
+}
+
+.perseus2{
+    border: 5px;
+    float: left; 
+    margin: 3px 12px 6px 0px; 
+    border: 7px solid #000000;
+}
+
+.header{
+    font-size: 50px;
+}
+
+.data05{
+    border: 5px;
+    border: 6px solid #000000;
+}
+
+figcaption{
+    font-size: 15px;
+    position: relative;
+}
