formatting change  progression

--- a/omam/src/individualpages/Methods.css
+++ b/omam/src/individualpages/Methods.css
@@ -4,3 +4,38 @@
     size: inherit;
     text-align: auto;
 }
+.column{
+    column-fill: auto;
+    width: 60px;
+    padding: 20px 40px;
+    text-align: left;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+.p1{
+    padding: 20px 40px;
+    text-align: left;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+.p2{
+    padding: 20px 40px;
+    text-align: left;
+    flex-direction: column;
+    align-items: center;
+    justify-content: justify;
+    text-justify: inherit;
+    font-size: 30px;
+}
+.c1{
+    font-size: 15px;
+    position: center;
+}
+.data05{
+    border: 5px;
+    border: 6px solid #000000;
+}
